--- a/Ivin/Base.lproj/Main.storyboard
+++ b/Ivin/Base.lproj/Main.storyboard
@@ -861,7 +861,7 @@
             <objects>
                 <viewController id="zSh-20-LIG" customClass="RootViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="go0-KN-fe0">
-                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -1874,19 +1874,86 @@
             <point key="canvasLocation" x="2912" y="2392"/>
         </scene>
         <!--Item-->
-        <scene sceneID="42M-ah-GuK">
+        <scene sceneID="2iK-L0-wgS">
             <objects>
-                <viewController storyboardIdentifier="QRcode" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hpI-g7-laL" customClass="ViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="EKL-yQ-Gqz">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="Z1U-7L-LXh"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hiZ-lr-4Sh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="Zlu-cM-snf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="BBL-6N-ofX"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="bBG-X8-Ghq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="GBK-1A-RON" kind="relationship" relationship="rootViewController" id="QTb-kK-1ss"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tiO-Tk-PF2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-952" y="-1502"/>
+            <point key="canvasLocation" x="-1368" y="918"/>
+        </scene>
+        <!--All Wine View Controller-->
+        <scene sceneID="ySA-on-HEf">
+            <objects>
+                <viewController id="GBK-1A-RON" customClass="AllWineViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bkH-Bf-SDV">
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="x28-36-ani">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="sectionIndexBackgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="search" id="7Uo-pK-7Zl"/>
+                    <navigationItem key="navigationItem" id="r4B-3w-VUz"/>
+                    <connections>
+                        <outlet property="tableview" destination="x28-36-ani" id="vv6-T5-2sK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FmU-D5-3uq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-948" y="918"/>
+        </scene>
+        <!--All Wine List View Controller-->
+        <scene sceneID="p5a-xL-xlC">
+            <objects>
+                <viewController storyboardIdentifier="AllWine" useStoryboardIdentifierAsRestorationIdentifier="YES" id="TAa-X9-5B9" customClass="AllWineListViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="irL-9h-9oJ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="200" sectionHeaderHeight="22" sectionFooterHeight="22" id="zY0-zB-qtw">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" restorationIdentifier="historycell" selectionStyle="default" indentationWidth="10" rowHeight="200" id="ALU-82-W0e" customClass="HistoryViewCell">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="200"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ALU-82-W0e" id="h2X-bq-xNK">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="zY0-zB-qtw" id="Bee-Of-MtE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pa3-DC-l35" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-963" y="1551"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Vex-rW-GRa">
@@ -1901,7 +1968,8 @@
                     <connections>
                         <segue destination="zSh-20-LIG" kind="relationship" relationship="viewControllers" id="deN-QM-ega"/>
                         <segue destination="PvG-7W-GLi" kind="relationship" relationship="viewControllers" id="3hy-kT-vXl"/>
-                        <segue destination="fuu-au-BjO" kind="relationship" relationship="viewControllers" id="bBr-vQ-Vxy"/>
+                        <segue destination="Zlu-cM-snf" kind="relationship" relationship="viewControllers" id="ImY-4z-gT4"/>
+                        <segue destination="fuu-au-BjO" kind="relationship" relationship="viewControllers" id="vGg-eQ-nFK"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FNP-y4-bzi" sceneMemberID="firstResponder"/>
@@ -1923,7 +1991,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ie3-uH-vNC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-41" y="-503"/>
+            <point key="canvasLocation" x="-70" y="-495"/>
         </scene>
         <!--Item-->
         <scene sceneID="Jmk-Q7-MJo">
@@ -1967,6 +2035,7 @@
         <image name="qr" width="30" height="30"/>
         <image name="rated.png" width="60" height="60"/>
         <image name="recomm.png" width="300" height="300"/>
+        <image name="search" width="30" height="30"/>
         <image name="second" width="30" height="30"/>
         <image name="setup" width="30" height="30"/>
         <image name="web.png" width="76" height="76"/>
