--- a/Ivin/Base.lproj/Main.storyboard
+++ b/Ivin/Base.lproj/Main.storyboard
@@ -756,12 +756,12 @@
                                 <rect key="frame" x="14" y="77" width="37" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="caved.png" id="vzK-2T-Eea">
-                                <rect key="frame" x="223" y="68" width="20" height="22"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emptyticketlist.png" id="vzK-2T-Eea">
+                                <rect key="frame" x="223" y="68" width="22" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rated.png" id="gOt-u5-Mbz">
-                                <rect key="frame" x="223" y="95" width="20" height="22"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emptybooklist.png" id="gOt-u5-Mbz">
+                                <rect key="frame" x="223" y="95" width="22" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="100 wines" id="Ixu-do-1ZM">
@@ -1893,7 +1893,7 @@
         <!--All Wine View Controller-->
         <scene sceneID="ySA-on-HEf">
             <objects>
-                <viewController id="GBK-1A-RON" customClass="AllWineViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="winefilter" useStoryboardIdentifierAsRestorationIdentifier="YES" id="GBK-1A-RON" customClass="AllWineViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bkH-Bf-SDV">
                         <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -2020,9 +2020,10 @@
         <image name="cal.png" width="250" height="250"/>
         <image name="call_c.png" width="300" height="300"/>
         <image name="cancel2.png" width="400" height="400"/>
-        <image name="caved.png" width="60" height="60"/>
         <image name="collect-vide.png" width="400" height="400"/>
         <image name="cup.png" width="50" height="50"/>
+        <image name="emptybooklist.png" width="300" height="300"/>
+        <image name="emptyticketlist.png" width="300" height="300"/>
         <image name="facebook.png" width="300" height="300"/>
         <image name="fax.png" width="300" height="300"/>
         <image name="foodpair.png" width="300" height="300"/>
@@ -2033,7 +2034,6 @@
         <image name="point.png" width="250" height="250"/>
         <image name="profile.png" width="300" height="300"/>
         <image name="qr" width="30" height="30"/>
-        <image name="rated.png" width="60" height="60"/>
         <image name="recomm.png" width="300" height="300"/>
         <image name="search" width="30" height="30"/>
         <image name="second" width="30" height="30"/>
